Fix sub menu background in dark mode

--- a/src/_includes/main-menu/style.css
+++ b/src/_includes/main-menu/style.css
@@ -239,7 +239,7 @@
     position: fixed;
     height: 56px;
     top: 73px;
-    background: white;
+    background: var(--white);
     z-index: -1;
   }
 }
